# LiteMusicPlayer

./: .gitignore  Architecture.pptx  CMakeLists.txt  README.md  README.zh-cn.md  build.bat  build.py  build.sh  design.md  plan.md  pull.sh  push.sh  version.h  version.h.in  ~$Architecture.pptx
GfxRaw/: Color.h  FontInfo.h  FontInfoEx.cpp  FontInfoEx.h  GfxRaw.h  GfxRawTypes.h  ImageBuffBlt.h  RawBmpFont.cpp  RawBmpFont.h  RawGlyphSet.cpp  RawGlyphSet.hpp  RawGraph.cpp  RawGraph.h  RawImage.cpp  RawImage.h  RawPen.cpp  RawPen.h
HttpLib/: HttpClient.cpp  HttpClient.hpp  UvAsync.hpp
ImageLib/: ILIO.cpp  ILIO.h  ImageIterator.h  ImageLib.vcproj  ImgBmpFile.cpp  ImgGifFile.cpp  ImgGifFile.h  ImgJpegFile.cpp  ImgJpegFile.h  ImgPngFile.cpp  ImgPngFile.h  ImgTifFile.cpp  RawImageData.cpp  RawImageData.h  makefile.am
LocalServer/: GenRsaKey.cpp  GenRsaKey.hpp  LocalServer.cpp  LocalServer.hpp  OperationLog.cpp  OperationLog.hpp  PlayerEventSender.cpp  PlayerEventSender.hpp
LyricsLib/: CurrentLyrics.cpp  CurrentLyrics.h  HelperFun.cpp  HelperFun.h  LrcParser.cpp  LrcParser.h  LrcParserHelper.h  LrcTag.cpp  LrcTag.h  LyrScrollActionRecorder.cpp  LyrScrollActionRecorder.h  LyrTimeStamp.cpp  LyrTimeStamp.h  Lyrics3v2.cpp  Lyrics3v2.h  LyricsKeywordFilter.cpp  LyricsKeywordFilter.h  LyricsParser.h  LyricsSearch.cpp  LyricsSearch.h  MLData.cpp  MLData.h  MLEncrypt.h  MLLib.h  MLLib.vcproj  MakefileMLServer  SncParser.cpp  SncParser.h  SrtParser.cpp  SrtParser.h  makefile.am
MLProtocol/: ClientCom.cpp  ClientCom.h  HttpClient.cpp  HttpClient.h  HttpProtocol.cpp  HttpProtocol.h  MLProtocol.cpp  MLProtocol.h  MLProtocol.stc  MLProtocol.vcp  MLProtocol.vcproj  MLUtils.cpp  MLUtils.h  MakefileMLServer  NetSDK.cpp  NetSDK.h  makefile.am  sockadapt.h
MPlayer/: Media.cpp  Media.h  MediaLibrary.cpp  MediaLibrary.h  MediaScanner.cpp  Player.cpp  Player.h  Playlist.cpp  Playlist.h
MPlayer-Plugins/: makefile.am
MPlayerEngine/: DspDemo.cpp  DspDemo.h  FBuffer.cpp  FBuffer.hpp  FileSystemMonitor.h  FileSystemMonitorWin32.cpp  FileSystemMonitorWin32.h  FileSystemUtil.cpp  FileSystemUtil.h  FullDiskSearch.cpp  FullDiskSearch.h  IMPlayer.h  IPlayerCore.hpp  InputBuffer.cpp  InputBuffer.hpp  MDAgent.cpp  MDAgent.h  MDFaad.cpp  MDFaad.h  MDFlac.cpp  MDFlac.h  MDLibmad.cpp  MDLibmad.h  MDLrc.cpp  MDLrc.h  MDMiniMp3.cpp  MDMiniMp3.h  MDRow.cpp  MDRow.h  MDWave.cpp  MDWave.h  MDWmpCore.cpp  MDWmpCore.h  MILocalFile.cpp  MILocalFile.h  MORaw.cpp  MORaw.h  MPTime.cpp  MPTime.h  MPTools.cpp  (+23 more)
MPlayerUI/: AutoBuild.in  AutoProcessEmbeddedLyrics.cpp  AutoProcessEmbeddedLyrics.h  CurMediaAlbumArt.cpp  CurMediaAlbumArt.h  DlgAbout.cpp  DlgAbout.h  DlgAdjustHue.cpp  DlgAdjustHue.h  DlgMediaInfo.cpp  DlgMediaInfo.h  DlgNewPlaylist.cpp  DlgNewPlaylist.hpp  DlgPlaylist.cpp  DlgPlaylist.hpp  DlgSaveEmbeddedLyrics.cpp  DlgSaveEmbeddedLyrics.hpp  DlgSaveLyrPrompt.cpp  DlgSearchLyrics.cpp  DlgSearchLyrics.h  DlgUpload.cpp  DlgUpload.h  DownloadMgr.cpp  DownloadMgr.h  ErrorResolveDlg.cpp  ErrorResolveDlg.h  Helper.cpp  Helper.h  LrcUploadDB.cpp  LrcUploadDB.h  LyrDisplayClrListWnd.cpp  LyrDisplayClrListWnd.h  LyricShowAgentObj.cpp  LyricShowAgentObj.h  LyricShowMultiRowObj.cpp  LyricShowMultiRowObj.h  LyricShowObj.cpp  LyricShowObj.h  LyricShowSingleRowObj.cpp  LyricShowSingleRowObj.h  (+125 more)
MediaTags/: AacFileTags.cpp  AacFileTags.hpp  FlacFileTags.cpp  FlacFileTags.hpp  ID3v2IF.cpp  ID3v2IF.h  IMediaFileTags.hpp  LRC File Format.txt  LrcParser.cpp  LrcParser.h  LrcParserHelper.h  LyrTimestamps.cpp  LyrTimestamps.h  Lyrics3v2.cpp  Lyrics3v2.h  LyricsData.cpp  LyricsData.h  M4aFileTags.cpp  M4aFileTags.hpp  M4aTag.cpp  M4aTag.h  MP3FileTags.cpp  MP3FileTags.hpp  MP3InfoReader.cpp  MP3InfoReader.h  MediaTagTypes.cpp  MediaTagTypes.hpp  MediaTags.cpp  MediaTags.h  MidiFileTags.cpp  MidiFileTags.h  MidiTag.cpp  MidiTag.h  OggFileTags.cpp  OggFileTags.hpp  XiphComment.cpp  XiphComment.hpp
Mp3Player/: AppDelegate.h  AppDelegate.mm  Info.plist  MiniLyrics.icns  main.mm
Mp3Player.xcodeproj/: project.pbxproj
MusicPlayer/: AppDelegate.h  AppDelegate.mm  main.mm
MusicPlayer.xcodeproj/: project.pbxproj
SimpleJVM/: BatchMem.cpp  BatchMem.h  SJVM.cpp  SJVM.h  SimpleJVM.cpp  SimpleJVM.sln  SimpleJVM.vcproj  SimpleJVMLib.vcproj  SimpleJava.l  SimpleJava.y  SjvmLib.cpp  SjvmLib.h  SyntaxTree.cpp  SyntaxTree.h  UIObject.java  UnitTest.java  VMStatment.cpp  VMStatment.h  VarDeclStack.cpp  VarDeclStack.h  ss.yy.cpp  stdafx.cpp  stdafx.h  unistd.h
Skin/: EventsDispatcherBase.cpp  EventsDispatcherBase.h  Formula.cpp  Formula.h  PopupSkinListWnd.cpp  PopupSkinListWnd.h  PopupSkinWnd.cpp  PopupSkinWnd.h  SFImage.cpp  SFImage.h  SFImgList.cpp  SFImgList.h  SjvmSkinSystem.cpp  SjvmSkinSystem.h  Skin.h  SkinAnimation.cpp  SkinAnimation.h  SkinAnimationUIObj.h  SkinApp.cpp  SkinApp.h  SkinButton.cpp  SkinButton.h  SkinCaption.cpp  SkinCaption.h  SkinComboBox.cpp  SkinComboBox.h  SkinContainer.cpp  SkinContainer.h  SkinDataObj.cpp  SkinDataObj.h  SkinDecorativeContainer.cpp  SkinDecorativeContainer.h  SkinEditCtrl.cpp  SkinEditCtrl.h  SkinFactory.cpp  SkinFactory.h  SkinFadeArea.cpp  SkinFadeArea.h  SkinFontProperty.cpp  SkinFontProperty.h  (+64 more)
Utils/: AllocatorPool.cpp  AllocatorPool.h  App.cpp  App.h  Base64.h  BinaryStream.cpp  BinaryStream.h  CharEncoding.cpp  CharEncoding.h  Date.cpp  Date.h  Digest.cpp  Digest.h  Error.cpp  Error.h  FileApi.cpp  FileApi.h  FileEx.cpp  FileEx.h  IJsonWriter.cpp  IJsonWriter.hpp  IdString.cpp  IdString.h  LocalizeTool.cpp  LocalizeTool.h  Log.cpp  Log.h  LogAlias.h  Looper.cpp  Looper.h  MLBinXMLParser.cpp  MLBinXMLParser.h  MPAutoPtr.h  PrivateProfile.cpp  Profile.cpp  Profile.h  RapidjsonWriterEx.hpp  RegExTool.cpp  RegExTool.h  SimpleXML.cpp  (+26 more)
Window/: Cursor.h  Desktop.h  DlgChooseColor.h  FileOpenDlg.h  FileSaveDlg.h  FolderDialog.h  IScrollBar.h  IWindow.cpp  IWindow.h  Menu.h  WindowLib.h  WindowTypes.h  WndDrag.cpp  WndDrag.h  WndResizer.cpp
old1/: MPMediaLibCmdHandler.cpp  MPMediaLibCmdHandler.h
tools/: add_utf8_bom.py  cpp_format.py  cpp_format2.py  cpp_format_test.h  vs_rc_convert.py  (+1 more)
(+962 files in other folders)
